public class ActionSquat extends ActionStep{
  public ActionSquat(CompleteRobot robot) {
    super(robot, Math.PI, Math.PI/5, Math.PI/5);
  }
}
